--- a/single-repo.html
+++ b/single-repo.html
@@ -25,6 +25,9 @@
   
   </main>
 
+  <!-- add script at the bottom of the body -->
+  <script src="./assets/js/homepage.js"></script>
+
 </body>
 
 </html>
