--- a/single-repo.html
+++ b/single-repo.html
@@ -22,10 +22,15 @@
   </header>
   
   <main>
+
+    <div id="issues-container" class="list-group">
+
+    </div>
   
   </main>
 
   <!-- add script at the bottom of the body -->
+  <script src="./assets/js/single.js"></script>
   <script src="./assets/js/homepage.js"></script>
 
 </body>
